kagenti/examples/identity/keycloak_token_exchange/resources/ingress-echo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels: { app: echo }
  template:
    metadata:
      labels: { app: echo }
    spec:
      containers:
      - name: echo
        image: hashicorp/http-echo:0.2.3
        args: ["-text=hello from ingress"]
        ports: [{ containerPort: 5678 }]

---
apiVersion: v1
kind: Service
metadata:
  name: echo
  namespace: default
spec:
  selector: { app: echo }
  ports:
    - port: 80
      targetPort: 5678

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: echo.$APP_DOMAIN
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: { name: echo, port: { number: 80 } }
